...
    private val ratingRepository: RatingRepository = RatingRepositoryProvider.repository,
) : ViewModel() {

  private val _uiState = MutableStateFlow(HomeUiState())
  val uiState: StateFlow<HomeUiState> = _uiState.asStateFlow()

  private val identificationErrorMsg = "An error occurred during your identification."
  private val listingErrorMsg = "An error occurred while loading proposals and requests."
  private val generalError =
      "An error occurred during your identification and while loading proposals and requests."
  private val numRequestDisplayed = 10
  private val numProposalDisplayed = 10

  private var refreshJob: Job? = null
...
