package com.android.sample.model.skills

/** Enum representing main subject categories */
enum class MainSubject {
  ACADEMICS,
  SPORTS,
  MUSIC,
  ARTS,
  TECHNOLOGY,
  LANGUAGES,
  CRAFTS
}

...
